<resources>
    <string name="app_name" translatable="false">FastWork</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Name user</string>
    <string name="nav_header_subtitle">userguest@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_compras">Compras</string>
    <string name="menu_settings">QR Trabajador</string>
    <string name="menu_cerrar_session">Cerrar Session</string>
    <string name="lorem_ipsum">ipsum</string>

    <string name="ingresar_contraseña">************</string>
    <string name="ingresar_gmail">example@gmail.com</string>
    <string name="aceptarbutton">Aceptar</string>

        <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="iniciar_sesion_google">GOOGLE</string>
    <string name="iniciar_sesion_facebook">FACEBOOK</string>
    <string name="registro_login">REGISTRAR</string>
    <string name="olvida_contraseña"><a href="">¿Olvidaste la contraseña?</a></string>
    <string name="crear_cuenta">¿Aún no tienes cuenta? <a href="">Registrate aquí</a> </string>
    <string name="visualizar_password">Visualizar password</string>
    <string name="logo">FAST WORK</string>
    <string name="drawer_open">Abrir menú</string>
    <string name="drawer_close">Cerrar menú</string>
    <string name="nav_settings">Navegar Configuración </string>
    <string name="facebook_app_id">2340511886287430</string>

    <string name="titulo_compromiso"> <b>ACUERDO DE COMPROMISO</b></string>
    <string name="acta_compromiso">
        Antes de continuar con el proceso de registro y contratación, debes comprometerte a lo siguiente:
<b>Cuidado y Bienestar:</b> Me comprometo a brindar un trabajo responsable, cumpliendo con todas las expectativas y responsabilidades del puesto de manera eficiente y respetuosa.

<b>Ambiente Apropiado:</b> Aseguraré que mi entorno de trabajo sea adecuado, profesional y adecuado para el desarrollo de las tareas asignadas, manteniendo un espacio seguro y productivo.

<b>Atención a la Calidad:</b> Prometo entregar trabajos de alta calidad, cumpliendo con los plazos establecidos y siguiendo las mejores prácticas del sector.

<b>Comunicación y Compromiso:</b> Trabajaré en una comunicación clara y continua con mis contratistas y empleadores, para asegurar que las expectativas y necesidades sean comprendidas y satisfechas de manera adecuada.

<b>Compromiso con la Permanencia:</b> Entiendo que el trabajo que asumo es una responsabilidad importante y me comprometo a ser puntual, mantener mi integridad y no abandonar los proyectos sin justificación, a menos que se den situaciones excepcionales.

Recuerda que, en caso de incumplimiento de estos términos y condiciones, el usuario será inhabilitado para continuar utilizando la aplicación "FASTWORK".
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>